cluster/graylog/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: graylog
  labels:
    service: graylog
  name: graylog
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 9000
    protocol: TCP
    name: tcp
  - port: 12201
    targetPort: 12201
    protocol: UDP
    name: udp
  selector:
    service: graylog
