cluster/graylog/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: graylog
  name: graylog
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.tls.certresolver: cloudflare
    # allow.http: "true"
spec:
  tls:
    - secretName: rancher-ronsal-com-br-tls
  rules:
  - host: graylog.ronsal.com.br
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: graylog
              port:
                number: 80
